[firefox] Fix nextcloud task list overlap

--- a/firefox/chrome/userContent.css
+++ b/firefox/chrome/userContent.css
@@ -246,4 +246,8 @@
 	.fc-timegrid-slots tr:nth-child(4n-2) > td:first-child {
 		visibility: hidden;
 	}
+
+	.mx-datepicker-main.mx-datepicker-popup {
+		left: 0 !important;
+	}
 }
